--- a/Olx.html
+++ b/Olx.html
@@ -32,41 +32,32 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <h2 class="portfolio-title">LapshoP Ecommerce</h2>
+            <h2 class="portfolio-title">OLX-Crud-Clone</h2>
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop2.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx1.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop1.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx2.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop3.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx3.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop4.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx5.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop5.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx6.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop6.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx7.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop7.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx8.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop8.png" style="height: 100%; width: 100%;" alt="">
-                </div>
-                <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop9.png" style="height: 100%; width: 100%;" alt="">
-                </div>
-                <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop10.png" style="height: 100%; width: 100%;" alt="">
-                </div>
-                <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop11.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Olx9.png" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -75,38 +66,35 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Node Web Application</li>
-              <li><strong>Project date</strong>: 5 June, 2024</li>
-              <li><strong>Github repo</strong>: <a href="https://github.com/midhunkalarikkal/lapshop"
-                  target="_blank">https://github.com/midhunkalarikkal/lapshop</a>
+              <li><strong>Category</strong>: MERN Stack Web Application</li>
+              <li><strong>Project date</strong>: 30 October, 2024</li>
+              <li><strong>Github repo of frontend</strong>: <a href="https://github.com/midhunkalarikkal/olx-clone"
+                  target="_blank">https://github.com/midhunkalarikkal/olx-clone</a>
+              </li>
+              <li><strong>Github repo of backend</strong>: <a href="https://github.com/midhunkalarikkal/olx_c_backend"
+                  target="_blank">https://github.com/midhunkalarikkal/olx_c_backend</a>
               </li>
               <li><strong>Live link</strong>: <a href="https://lapshop.site"
                   target="_blank">https://www.lapshop.site</a></li>
             </ul>
             <p class="text-justify" style="line-height: 1.6; text-align: justify;">
-              I developed one of my most challenging and rewarding projects—an E-Commerce Web Application for Laptops!
-              This project was built entirely from scratch, giving me hands-on experience in full-stack development,
-              from front-end design to back-end functionality. It was an incredible learning journey, and I’m
-              continuously striving to enhance its features and performance.
-
-              Some of the key features include Filter, Sort, Cart with Save for Later, Product Reviews, Order Tracking,
-              Flexible Payment Options, Responsive Design, Admin Dashboard, Product & Order Management, User Management
-              System, Banner & Coupon Management, and Sales Reports. </p>
+                OLX Clone, a MERN stack application designed to strengthen full-stack development concepts through CRUD operations. This project integrates React.js for the front end, Express.js for the backend, MongoDB for database management, and Node.js to handle server-side logic. It focuses on state management using Context API, efficient styling with Tailwind CSS, and smooth notifications via React Hot Toast.
+                For authentication and hosting, Firebase is integrated, ensuring a responsive and seamless user experience. Additionally, I implemented Cloudinary for efficient image storage. The project includes key features like CRUD Operations, User Authentication, Responsive UI, State Management, and Firebase Hosting, making it a well-structured and scalable application.
+            </p>
             <div id="projectDetails" class="mt-3">
-              <h6 class="mt-4">Tech Stack 💻</h6>
-              <ul>
-                <li><strong>Frontend:</strong> HTML, CSS, Bootstrap, EJS</li>
-                <li><strong>Backend:</strong> Node.js, Express.js</li>
-                <li><strong>Database:</strong> MongoDB</li>
-                <li><strong>Payment Gateway:</strong> Razorpay</li>
-                <li><strong>File Upload:</strong> Multer</li>
-                <li><strong>Email Notifications:</strong> Nodemailer</li>
-              </ul>
-              <h6 class="mt-4">Hosting:</h6>
-              <ul>
-                <li>🌐 <strong>AWS EC2:</strong> Configured with Nginx and SSL certificates for secure transactions.
-                </li>
-              </ul>
+                <h6 class="mt-4">Tech Stack 💻</h6>
+                <ul>
+                    <li><strong>Frontend:</strong> React, Tailwind Css </li>
+                    <li><strong>Backend:</strong> Node.js, Express.js</li>
+                    <li><strong>Database:</strong> MongoDB</li>
+                    <li><strong>Global state management library</strong> Context API</li>
+                    <li><strong>Authentication:</strong> Firebase</li>
+                    <li><strong>Media storage</strong> Cloudinary</li>
+                    <li><strong>File Upload:</strong> Multer</li>
+                    <li><strong>Notofication:</strong> React hot toast</li>
+                    <li><strong>Frontend hosted on:</strong> Firebase</li>
+                    <li><strong>Backend hosted on:</strong> Render</li>
+                </ul>
             </div>
           </div>
         </div>
