--- a/craveroute.html
+++ b/craveroute.html
@@ -32,41 +32,35 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <h2 class="portfolio-title">LapshoP Ecommerce</h2>
+            <h2 class="portfolio-title">Craveroute</h2>
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop2.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute1.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop1.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute2.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop3.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute3.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop4.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute4.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop5.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute5.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop6.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute6.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop7.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute7.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop8.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute8.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop9.png" style="height: 100%; width: 100%;" alt="">
-                </div>
-                <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop10.png" style="height: 100%; width: 100%;" alt="">
-                </div>
-                <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop11.png" style="height: 100%; width: 100%;" alt="">
+                  <img src="assets/img/portfolio/Craveroute9.png" style="height: 100%; width: 100%;" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -75,37 +69,36 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Node Web Application</li>
-              <li><strong>Project date</strong>: 5 June, 2024</li>
-              <li><strong>Github repo</strong>: <a href="https://github.com/midhunkalarikkal/lapshop"
-                  target="_blank">https://github.com/midhunkalarikkal/lapshop</a>
+              <li><strong>Category</strong>: React with Express</li>
+              <li><strong>Project date</strong>: 7 October, 2024</li>
+              li><strong>Github repo of frontend</strong>: <a href="https://github.com/midhunkalarikkal/React-f-d"
+                  target="_blank">https://github.com/midhunkalarikkal/React-f-d</a>
               </li>
-              <li><strong>Live link</strong>: <a href="https://lapshop.site"
-                  target="_blank">https://www.lapshop.site</a></li>
+              <li><strong>Github repo of backend</strong>: <a href="https://github.com/midhunkalarikkal/CraveRoute-BE"
+                  target="_blank">https://github.com/midhunkalarikkal/CraveRoute-BE</a>
+              </li>
+              <li><strong>Live link</strong>: <a href="https://craveroute-food-order.web.app/"
+                  target="_blank">https://craveroute-food-order.web.app/</a></li>
             </ul>
             <p class="text-justify" style="line-height: 1.6; text-align: justify;">
-              I developed one of my most challenging and rewarding projects—an E-Commerce Web Application for Laptops!
-              This project was built entirely from scratch, giving me hands-on experience in full-stack development,
-              from front-end design to back-end functionality. It was an incredible learning journey, and I’m
-              continuously striving to enhance its features and performance.
+              CraveRoute is a simple and elegant food delivery application built as part of my learning journey with React and Tailwind CSS. This project helped me explore and implement various concepts and features of React, Redux, and Tailwind CSS, combining them into a fully functional and responsive sample application.
 
-              Some of the key features include Filter, Sort, Cart with Save for Later, Product Reviews, Order Tracking,
-              Flexible Payment Options, Responsive Design, Admin Dashboard, Product & Order Management, User Management
-              System, Banner & Coupon Management, and Sales Reports. </p>
+Developed entirely from scratch, CraveRoute reflects my dedication to learning React and building modern web applications. By starting from a blank canvas, I structured the application logic, explored component-based development, and created a seamless user experience.
+
+Although it is a basic project, with data stored only in localStorage, CraveRoute served as an excellent platform for me to dive deeper into React's capabilities and styling with Tailwind, while understanding how state management with Redux can simplify complex UI logic. Inspired by popular food delivery apps, it showcases essential features like restaurant listings, menu viewing, cart management, and a payment gateway.
+            </p>
             <div id="projectDetails" class="mt-3">
               <h6 class="mt-4">Tech Stack 💻</h6>
               <ul>
-                <li><strong>Frontend:</strong> HTML, CSS, Bootstrap, EJS</li>
+                <li><strong>Frontend:</strong> React, Tailwind Css </li>
                 <li><strong>Backend:</strong> Node.js, Express.js</li>
-                <li><strong>Database:</strong> MongoDB</li>
-                <li><strong>Payment Gateway:</strong> Razorpay</li>
+                <li><strong>Global state management library</strong> Redux</li>
+                <li><strong>Authentication:</strong> Firebase</li>
                 <li><strong>File Upload:</strong> Multer</li>
-                <li><strong>Email Notifications:</strong> Nodemailer</li>
-              </ul>
-              <h6 class="mt-4">Hosting:</h6>
-              <ul>
-                <li>🌐 <strong>AWS EC2:</strong> Configured with Nginx and SSL certificates for secure transactions.
-                </li>
+                <li><strong>Notofication:</strong> React tostify</li>
+                <li><strong>Testing:</strong> Jest</li>
+                <li><strong>Frontend hosted on:</strong> Firebase</li>
+                <li><strong>Backend hosted on:</strong> Render</li>
               </ul>
             </div>
           </div>
