--- a/valorant.html
+++ b/valorant.html
@@ -9,16 +9,13 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
 
-    <!-- Favicons -->
     <link href="assets/img/favicon.jpg" rel="icon">
     <link href="assets/img/favicon.jpg" rel="apple-touch-icon">
 
-    <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
         rel="stylesheet">
 
-    <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -26,27 +23,18 @@
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
-
     <main id="main">
-
-        <!-- ======= Portfolio Details ======= -->
         <div id="portfolio-details" class="portfolio-details">
             <div class="container">
-
                 <div class="row">
-
                     <div class="col-lg-8">
                         <h2 class="portfolio-title">Amazon Home Page</h2>
-
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
-
                                 <div class="swiper-slide" style="height: auto">
                                     <img src="assets/img/portfolio/valorant1.png" style="height: 100%; width: 100%;"
                                         alt="">
@@ -79,18 +67,14 @@
                                     <img src="assets/img/portfolio/valorant8.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
-
                             </div>
                             <div class="swiper-pagination"></div>
                         </div>
-
                     </div>
-
                     <div class="col-lg-4 portfolio-info">
                         <h3>Project information</h3>
                         <ul>
                             <li><strong>Category</strong>: Node Web Application</li>
-                            <li><strong></strong></li>
                             <li><strong>Project date</strong>: 10 Jan, 2024</li>
                             <li><strong>Project URL</strong>: <a
                                     href="https://midhunkalarikkal.github.io/valorant/">https://midhunkalarikkal.github.io/valorant/</a>
@@ -100,19 +84,15 @@
                          I've been a passionate gamer since childhood, diving into countless open-world and first-person perspective games, with Valorant being my all-time favorite. My dream is to become a programmer at a leading game development company. However, after joining Brocamp, I shifted my focus entirely to coding, putting gaming on hold. As a tribute to Valorant, I created a webpage dedicated to the game, leveraging the Valorant npm package. This project is a Node.js application featuring login/logout functionality, complete with user and admin panels where the admin can manage users and add new ones. It's just the beginning of my journey into Node.js app development, combining my love for gaming with my growing skills in coding.
                         </p>
                     </div>
-
                 </div>
-
             </div>
-        </div><!-- End Portfolio Details -->
-
-    </main><!-- End #main -->
+        </div>
+    </main>
 
     <div class="credits">
         &copy; All copyrights claimed 2024 <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
     </div>
 
-    <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -121,9 +101,7 @@
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
 
-    <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
