--- a/Amazon_portfoilio.html
+++ b/Amazon_portfoilio.html
@@ -9,14 +9,11 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
   <link href="assets/img/favicon.jpg" rel="icon">
   <link href="assets/img/favicon.jpg" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -24,27 +21,18 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
-
   <main id="main">
-
-    <!-- ======= Portfolio Details ======= -->
     <div id="portfolio-details" class="portfolio-details">
       <div class="container">
-
         <div class="row">
-
           <div class="col-lg-8">
             <h2 class="portfolio-title">Amazon Home Page</h2>
-
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-
                 <div class="swiper-slide" style="height: auto">
                   <img src="assets/img/portfolio/Amazon.png" style="height: 100%; width: 100%;" alt="">
                 </div>
@@ -60,13 +48,10 @@
                 <div class="swiper-slide" style="height: auto">
                   <img src="assets/img/portfolio/Amazon5.png" style="height: 100%; width: 100%;" alt="">
                 </div>
-
               </div>
               <div class="swiper-pagination"></div>
             </div>
-
           </div>
-
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
@@ -79,19 +64,15 @@
               Creating an Amazon-inspired webpage was an insightful venture. Employing HTML, CSS, and JavaScrip. The result was a webpage featuring an organized navbar, smooth scrolling sections, and attractive product showcases and promotional banners, providing an optimal user experience on medium and larger screens.
             </p>
           </div>
-
         </div>
-
       </div>
-    </div><!-- End Portfolio Details -->
-
-  </main><!-- End #main -->
+    </div>
+  </main>
 
   <div class="credits">
     &copy; All copyrights claimed 2024 <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
   </div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -100,9 +81,7 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
