--- a/Kalari_portfolio.html
+++ b/Kalari_portfolio.html
@@ -9,16 +9,13 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
   <link href="assets/img/favicon.jpg" rel="icon">
   <link href="assets/img/favicon.jpg" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -26,43 +23,29 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- Hiding scrollbar without removing its function-->
   <style>
-    /* Hide scrollbar for WebKit browsers */
     ::-webkit-scrollbar {
       width: 0;
-      /* Remove scrollbar space */
       background: transparent;
-      /* Optional: just make scrollbar invisible */
     }
 
-    /* Optional: only hide scrollbar thumb */
     ::-webkit-scrollbar-thumb {
       background: transparent;
     }
   </style>
-
 </head>
 
 <body>
-
   <main id="main">
-
-    <!-- ======= Portfolio Details ======= -->
     <div id="portfolio-details" class="portfolio-details">
       <div class="container">
-
         <div class="row">
-
           <div class="col-lg-8">
             <h2 class="portfolio-title">Kuttippuram Kalari</h2>
-
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-
                 <div class="swiper-slide" style="height: auto">
                   <img src="assets/img/portfolio/Kalari.png" style="height: 100%; width: 100%;" alt="">
                 </div>
@@ -72,13 +55,10 @@
                 <div class="swiper-slide" style="height: auto">
                   <img src="assets/img/portfolio/Kalari3.png" style="height: 100%; width: 100%;" alt="">
                 </div>
-
               </div>
               <div class="swiper-pagination"></div>
             </div>
-
           </div>
-
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
@@ -101,19 +81,15 @@
               community and showcasing my web development skills.
             </p>
           </div>
-
         </div>
-
       </div>
-    </div><!-- End Portfolio Details -->
-
-  </main><!-- End #main -->
+    </div>
+  </main>
 
   <div class="credits">
     &copy; All copyrights claimed 2024 <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
   </div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -122,9 +98,7 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
