--- a/index.html
+++ b/index.html
@@ -9,22 +9,17 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
   <link href="assets/img/mypic1_black.png" rel="icon">
   <link href="assets/img/mypic1_black.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
 
-  <!--Ajax for form-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <!-- Jquery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -32,29 +27,22 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!--Font-Awesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  
-  <!--Preloader-->
-  <div class="preloader">
+    <div class="preloader">
     <div class="spinner"></div>
   </div>
-
-  <!-- ======= Header ======= -->
   <header id="header">
     <div class="container d-lg-flex align-items-lg-center">
       <div class="col-lg-6 d-flex flex-column align-items-center align-items-lg-start">
         <h1><a href="index.html">Midhun K Paniker</a></h1>
         <h2 >I'm a passionate <span>MERN Stack Developer</span> from Kerala</h2>
-
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link active" href="#header">Home</a></li>
@@ -64,8 +52,7 @@
             <li><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
-
+        </nav>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/midhun-k-paniker-726226231" class="linkedin"><i
               class="bi bi-linkedin"></i></a>
@@ -78,26 +65,20 @@
               class="bi bi-instagram"></i></a>
         </div>
       </div>
-      <div class="d-none d-lg-block col-lg-6 d-flex"> <!---->
-        <a href="index.html" class="m-lg-auto "> <!--d-none d-lg-block-->
+      <div class="d-none d-lg-block col-lg-6 d-flex">
+        <a href="index.html" class="m-lg-auto ">
           <img src="assets/img/mypic1_black.png" alt="" class="headerimg img-fluid" style="margin-left: 50px;">
         </a>
       </div>
     </div>
+  </header>
 
-  </header><!-- End Header -->
-
-  <!-- ======= About Section ======= -->
   <section id="about" class="about">
-
-    <!-- ======= About Me ======= -->
     <div class="about-me container">
-
       <div class="section-title">
         <h2>About</h2>
         <p>Learn more about me</p>
       </div>
-
       <div class="row">
         <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="fade-right">
           <img src="assets/img/mypic1_wb.png" class="img-fluid w-75" alt="">
@@ -134,12 +115,9 @@
           </p>
         </div>
       </div>
-
     </div>
 
-    <!-- ======= Skills  ======= -->
     <div class="skills container">
-
       <div class="section-title">
         <h2>Skills</h2>
       </div>
@@ -161,19 +139,15 @@
                 </ul>
             </div>
         </div>
-
     </div>
   </section>
   
-  <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
     <div class="container">
-
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
       </div>
-
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
@@ -191,7 +165,6 @@
             </ul>
             </p>
           </div>
-
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
             <h4>Bachelor of Technology in Computer Science Engineering</h4>
@@ -241,19 +214,15 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
-  <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
     <div class="container">
-
       <div class="section-title">
         <h2>Portfolio</h2>
         <p>My Works</p>
       </div>
-
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
@@ -264,9 +233,33 @@
           </ul>
         </div>
       </div>
-
       <div class="row portfolio-container">
-
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Olx1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>OLX-Crud-Clone</h4>
+              <p>Clone</p>
+              <div class="portfolio-links">
+                <a href="olx.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Craveroute1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Craveroute</h4>
+              <p>Food order app</p>
+              <div class="portfolio-links">
+                <a href="craveroute.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Lapshop1.png" class="img-fluid" alt="">
@@ -280,7 +273,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/valorant1.png" class="img-fluid" alt="">
@@ -294,7 +286,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Flipkart.png" class="img-fluid" alt="">
@@ -308,7 +299,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Kalari.png" class="img-fluid" alt="">
@@ -322,7 +312,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Amazon.png" class="img-fluid" alt="">
@@ -336,7 +325,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Instagram.png" class="img-fluid" alt="">
@@ -351,7 +339,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Netflix.png" class="img-fluid" alt="">
@@ -365,24 +352,17 @@
             </div>
           </div>
         </div>
-
-
       </div>
-
     </div>
   </section>
 
-  <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
     <div class="container">
-
       <div class="section-title">
         <h2>Contact</h2>
         <p>Contact Me</p>
       </div>
-
       <div class="row mt-2">
-
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
@@ -390,7 +370,6 @@
             <p>Kalarikkal house, Kuttippuram, 679571</p>
           </div>
         </div>
-
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
@@ -408,7 +387,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
@@ -424,7 +402,6 @@
           </div>
         </div>
       </div>
-
       <form id="submit-form" role="form" class="php-email-form">
         <div class="row">
           <div class="col-md-6 form-group">
@@ -453,15 +430,13 @@
           <button type="submit" class="btn btn-primary">Send Message</button>
         </div>
       </form>
-
     </div>
   </section>
 
   <div class="credits">
-    &copy; All copyrights claimed 2024 <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
+    &copy; All copyrights reserved 2025 <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
   </div>
 
-  <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -469,11 +444,9 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/form.js"></script>
   <script src="assets/js/api.js"></script>
-
 </body>
 
 </html>
