new projects added and all files updated

--- a/Amazon_portfoilio.html
+++ b/Amazon_portfoilio.html
@@ -55,14 +55,22 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
+              <li><strong>Category</strong>: Static Web Page</li>
               <li><strong></strong></li>
               <li><strong>Project date</strong>: 14 September, 2023</li>
-              <li><strong>Project URL</strong>: <a href="https://midhunkalarikkal.github.io/amazonhomepage/">https://midhunkalarikkal.github.io/amazonhomepage/</a></li>
+              <li><strong>Github repo</strong>: <a href="https://midhunkalarikkal.github.io/amazonhomepage/">https://midhunkalarikkal.github.io/amazonhomepage/</a></li>
+              <li><strong>Live URL</strong>: <a href="https://github.com/midhunkalarikkal/amazonhomepage">https://github.com/midhunkalarikkal/amazonhomepage</a></li>
             </ul>
-            <p>
+            <p class="text-justify" style="line-height: 1.6; text-align: justify;">
               Creating an Amazon-inspired webpage was an insightful venture. Employing HTML, CSS, and JavaScrip. The result was a webpage featuring an organized navbar, smooth scrolling sections, and attractive product showcases and promotional banners, providing an optimal user experience on medium and larger screens.
             </p>
+            <div id="projectDetails" class="mt-3">
+              <h6 class="mt-4">Tech Stack 💻</h6>
+              <ul>
+                <li><strong>Frontend:</strong> HTML, CSS3 </li>
+                <li><strong>Hosted on:</strong> Github Pages</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
