--- a/Flipkart_portfolio.html
+++ b/Flipkart_portfolio.html
@@ -42,6 +42,9 @@
                 <div class="swiper-slide" style="height: auto">
                   <img src="assets/img/portfolio/Flipkart3.png" style="height: 100%; width: 100%;" alt="">
                 </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Flipkart4.png" style="height: 100%; width: 100%;" alt="">
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -49,13 +52,21 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
+              <li><strong>Category</strong>: Static Web Page</li>
               <li><strong>Project date</strong>: 22 September, 2023</li>
-              <li><strong>Project URL</strong>: <a href="https://midhunkalarikkal.github.io/flipkart_homepage/">https://midhunkalarikkal.github.io/flipkart_homepage/</a></li>
+              <li><strong>Github repo</strong>: <a href="https://github.com/midhunkalarikkal/flipkart_homepage">https://github.com/midhunkalarikkal/flipkart_homepage</a></li>
+              <li><strong>Live URL</strong>: <a href="https://midhunkalarikkal.github.io/flipkart_homepage/">https://midhunkalarikkal.github.io/flipkart_homepage/</a></li>
             </ul>
-            <p>
+            <p class="text-justify" style="line-height: 1.6; text-align: justify;">
               I embarked on an exciting journey of web design, crafting a captivating rendition of Flipkart's home page. Harnessing the combined prowess of HTML, CSS, Bootstrap, and JavaScript, I meticulously brought the design to life. Bootstrap's classes and components played a pivotal role in creating a responsive, visually appealing layout. The webpage featured an elegant navbar for seamless navigation, multiple scrolling sections for engaging content, and thoughtfully designed product displays. Additionally, strategically placed banners added an element of advertisement and shopping convenience, enhancing the overall user experience.
             </p>
+            <div id="projectDetails" class="mt-3">
+              <h6 class="mt-4">Tech Stack 💻</h6>
+              <ul>
+                <li><strong>Frontend:</strong> HTML, CSS3, Bootstrap5 </li>
+                <li><strong>Hosted on:</strong> Github Pages</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
