--- a/Instagram_portfolio.html
+++ b/Instagram_portfolio.html
@@ -46,13 +46,21 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
+              <li><strong>Category</strong>: Static Web Page</li>
               <li><strong>Project date</strong>: 14 September, 2023</li>
+              <li><strong>Github repo</strong>: <a href="https://github.com/midhunkalarikkal/instahomepage">https://github.com/midhunkalarikkal/instahomepage</a></li>
               <li><strong>Project URL</strong>: <a href="https://midhunkalarikkal.github.io/instahomepage/">https://midhunkalarikkal.github.io/instahomepage/</a></li>
             </ul>
-            <p>
+            <p class="text-justify" style="line-height: 1.6; text-align: justify;">
               Creating an Instagram-inspired webpage was an insightful venture. Employing HTML, CSS, and JavaScript. I included almost all frontend design components in this webpage. Left side section for navigation buttons, center section for scrolling posts and right side section for accounts. and also the story section.
             </p>
+            <div id="projectDetails" class="mt-3">
+              <h6 class="mt-4">Tech Stack 💻</h6>
+              <ul>
+                <li><strong>Frontend:</strong> HTML, CSS3 </li>
+                <li><strong>Hosted on:</strong> Github Pages</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
