--- a/Kalari_portfolio.html
+++ b/Kalari_portfolio.html
@@ -55,6 +55,9 @@
                 <div class="swiper-slide" style="height: auto">
                   <img src="assets/img/portfolio/Kalari3.png" style="height: 100%; width: 100%;" alt="">
                 </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Kalari4.png" style="height: 100%; width: 100%;" alt="">
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -65,10 +68,13 @@
               <li><strong>Category</strong>: Static Web Page</li>
               <li><strong>Client</strong>: Kuttippuram Kalari Samajam</li>
               <li><strong>Project date</strong>: 22 September, 2023</li>
-              <li><strong>Project URL</strong>: <a
+              <li><strong class="text-warning">On Updation</strong>: <span>This webpage is currently being updated to migrate to a new stack, enhance dynamic functionality, and add features for managing committee members, financial data, and class details as per the client's requirements.</span></li>
+              <li><strong>Github URL</strong>: <a
+                  href="https://github.com/midhunkalarikkal/kuttippuramkalari">https://github.com/midhunkalarikkal/kuttippuramkalari</a></li>
+              <li><strong>Live URL</strong>: <a
                   href="https://kuttippuramkalari-7a30c.web.app/">https://kuttippuramkalari-7a30c.web.app/</a></li>
             </ul>
-            <p>
+            <p class="text-justify" style="line-height: 1.6; text-align: justify;">
               I am proud to present my inaugural static webpage dedicated to my cherished family community, Kalari.
               Merging my passion for web development and love for my community, I meticulously crafted a responsive
               website. It features a sleek navigation bar for easy browsing, gracefully welcoming visitors to a
@@ -80,6 +86,13 @@
               a streamlined and organized development process. This project marks a meaningful step in honoring my
               community and showcasing my web development skills.
             </p>
+            <div id="projectDetails" class="mt-3">
+              <h6 class="mt-4">Tech Stack 💻</h6>
+              <ul>
+                <li><strong>Frontend:</strong> HTML, CSS3, Bootstrap5 </li>
+                <li><strong>Hosted on:</strong> Firebase</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
