--- a/Netflix_portfolio.html
+++ b/Netflix_portfolio.html
@@ -49,13 +49,21 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
+              <li><strong>Category</strong>: Static Web Page</li>
               <li><strong>Project date</strong>: 14 September, 2023</li>
+              <li><strong>Github repo</strong>: <a href="https://github.com/midhunkalarikkal/Netflixhomepage">https://github.com/midhunkalarikkal/Netflixhomepage</a></li>
               <li><strong>Project URL</strong>: <a href="https://midhunkalarikkal.github.io/Netflixhomepage/Index.html">https://midhunkalarikkal.github.io/Netflixhomepage/Index.html</a></li>
             </ul>
-            <p>
+            <p class="text-justify" style="line-height: 1.6; text-align: justify;">
               I created a captivating Netflix-inspired homepage using HTML and CSS, leveraging the power of CSS flex properties for seamless layout. The webpage boasts multiple scrolling sections, each offering unique content and information. At the centerpiece is a prominent movie banner showcasing a featured film alongside its relevant details, creating an engaging focal point for visitors. The navigation bar neatly organizes additional links, enhancing user experience and enabling seamless exploration of the webpage's rich and diverse content.
             </p>
+            <div id="projectDetails" class="mt-3">
+              <h6 class="mt-4">Tech Stack 💻</h6>
+              <ul>
+                <li><strong>Frontend:</strong> HTML, CSS3 </li>
+                <li><strong>Hosted on:</strong> Github Pages</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
