--- a/Olx.html
+++ b/Olx.html
@@ -74,8 +74,8 @@
               <li><strong>Github repo of backend</strong>: <a href="https://github.com/midhunkalarikkal/olx_c_backend"
                   target="_blank">https://github.com/midhunkalarikkal/olx_c_backend</a>
               </li>
-              <li><strong>Live link</strong>: <a href="https://lapshop.site"
-                  target="_blank">https://www.lapshop.site</a></li>
+              <li><strong>Live link</strong>: <a href="https://olx-clone-5630e.web.app/"
+                  target="_blank">https://olx-clone-5630e.web.app/</a></li>
             </ul>
             <p class="text-justify" style="line-height: 1.6; text-align: justify;">
                 OLX Clone, a MERN stack application designed to strengthen full-stack development concepts through CRUD operations. This project integrates React.js for the front end, Express.js for the backend, MongoDB for database management, and Node.js to handle server-side logic. It focuses on state management using Context API, efficient styling with Tailwind CSS, and smooth notifications via React Hot Toast.
