--- a/craveroute.html
+++ b/craveroute.html
@@ -71,13 +71,13 @@
             <ul>
               <li><strong>Category</strong>: React with Express</li>
               <li><strong>Project date</strong>: 7 October, 2024</li>
-              li><strong>Github repo of frontend</strong>: <a href="https://github.com/midhunkalarikkal/React-f-d"
+              <li><strong>Github repo of frontend</strong>: <a href="https://github.com/midhunkalarikkal/React-f-d"
                   target="_blank">https://github.com/midhunkalarikkal/React-f-d</a>
               </li>
               <li><strong>Github repo of backend</strong>: <a href="https://github.com/midhunkalarikkal/CraveRoute-BE"
                   target="_blank">https://github.com/midhunkalarikkal/CraveRoute-BE</a>
               </li>
-              <li><strong>Live link</strong>: <a href="https://craveroute-food-order.web.app/"
+              <li><strong>Live URL</strong>: <a href="https://craveroute-food-order.web.app/"
                   target="_blank">https://craveroute-food-order.web.app/</a></li>
             </ul>
             <p class="text-justify" style="line-height: 1.6; text-align: justify;">
