--- a/valorant.html
+++ b/valorant.html
@@ -36,7 +36,7 @@
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
                                 <div class="swiper-slide" style="height: auto">
-                                    <img src="assets/img/portfolio/valorant1.png" style="height: 100%; width: 100%;"
+                                    <img src="assets/img/portfolio/valorant.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
                                 <div class="swiper-slide" style="height: auto">
@@ -67,6 +67,22 @@
                                     <img src="assets/img/portfolio/valorant8.png" style="height: 100%; width: 100%;"
                                         alt="">
                                 </div>
+                                <div class="swiper-slide" style="height: auto">
+                                    <img src="assets/img/portfolio/valorant9.png" style="height: 100%; width: 100%;"
+                                        alt="">
+                                </div>
+                                <div class="swiper-slide" style="height: auto">
+                                    <img src="assets/img/portfolio/valorant10.png" style="height: 100%; width: 100%;"
+                                        alt="">
+                                </div>
+                                <div class="swiper-slide" style="height: auto">
+                                    <img src="assets/img/portfolio/valorant11.png" style="height: 100%; width: 100%;"
+                                        alt="">
+                                </div>
+                                <div class="swiper-slide" style="height: auto">
+                                    <img src="assets/img/portfolio/valorant12.png" style="height: 100%; width: 100%;"
+                                        alt="">
+                                </div>
                             </div>
                             <div class="swiper-pagination"></div>
                         </div>
@@ -75,14 +91,28 @@
                         <h3>Project information</h3>
                         <ul>
                             <li><strong>Category</strong>: Node Web Application</li>
-                            <li><strong>Project date</strong>: 10 Jan, 2024</li>
-                            <li><strong>Project URL</strong>: <a
-                                    href="https://midhunkalarikkal.github.io/valorant/">https://midhunkalarikkal.github.io/valorant/</a>
+                            <li><strong>Project date</strong>: 10 January, 2024</li>
+                            <li><strong>Github repo</strong>: <a
+                                    href="https://midhunkalarikkal.github.io/valorant/" target="_blank">https://midhunkalarikkal.github.io/valorant/</a>
+                            </li>
+                            <li><strong>Live URL</strong>: <a
+                                    href="https://valorant-falj.onrender.com" target="_blank">https://valorant-falj.onrender.com</a>
                             </li>
                         </ul>
-                        <p>
+                        <p class="text-justify" style="line-height: 1.6; text-align: justify;">
                          I've been a passionate gamer since childhood, diving into countless open-world and first-person perspective games, with Valorant being my all-time favorite. My dream is to become a programmer at a leading game development company. However, after joining Brocamp, I shifted my focus entirely to coding, putting gaming on hold. As a tribute to Valorant, I created a webpage dedicated to the game, leveraging the Valorant npm package. This project is a Node.js application featuring login/logout functionality, complete with user and admin panels where the admin can manage users and add new ones. It's just the beginning of my journey into Node.js app development, combining my love for gaming with my growing skills in coding.
                         </p>
+                        <div id="projectDetails" class="mt-3">
+                            <h6 class="mt-4">Tech Stack 💻</h6>
+                            <ul>
+                              <li><strong>Frontend:</strong> HTML, CSS3, Bootstrap5 </li>
+                              <li><strong>Template Engine:</strong> EJS</li>
+                              <li><strong>Backend:</strong> Node.js, Express.js</li>
+                              <li><strong>Databse:</strong> MongoDB</li>
+                              <li><strong>File Upload:</strong> Multer</li>
+                              <li><strong>Hosted on:</strong> Render</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
